--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run : echo "Hii"
-      - run : echo "Job ID ${{github.job}}"
+      - run : echo "workflow ${{github.workflow}}"
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
