--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -5,34 +5,18 @@ jobs:
   check-bats-version:
     runs-on: ubuntu-latest
     steps:
-     - name: Send mail
-        uses: dawidd6/action-send-mail@v3
-        with:
-          server_address: smtp.gmail.com
-          server_port: 465
-          username: ${{SECRETS.EMAIL}}
-          password: ${{SECRETS.PASSWORD}}
-          subject: Opportunity for you
-          to: github-campus-group@smail.iitm.ac.in
-          cc: ce20b112@smail.iitm.ac.in
-          from: GitHub Campus Expert
-          html_body: file://temp.html
-          secure: true
-          ignore_cert: true
-          convert_markdown: true
-          priority: low
-      - run : expr 1+1 > output.log
-      - name : upload output file
-        uses : actions/upload-artifact@v3
-        with: 
-            name: output-log-file
-            path : output.log
-      - run : echo "Hii"
-      - run:  echo "Deploy to ${{ inputs.deploy_target }} by @${{ github.actor }}"
-      - run : echo "workflow ${{github.workflow}}"
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '14'
-      - run: npm install -g bats
-      - run: bats -v
+    - name: Send mail
+      uses: dawidd6/action-send-mail@v3
+      with:
+        server_address: smtp.gmail.com
+        server_port: 465
+
+        username: ${{ secrets.MAIL_USERNAME }}
+        password: ${{ secrets.MAIL_PASSWORD }}
+
+        subject: Github Actions job result
+        to: obiwan@example.com,yoda@example.com
+
+        from: Luke Skywalker # OR 'Luke Skywalker <user@example.com>'
+
+        body: Build job of ${{ github.repository }} completed successfully!
