--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -15,8 +15,8 @@ jobs:
         password: ${{ secrets.MAIL_PASSWORD }}
 
         subject: Github Actions job result
-        to: obiwan@example.com,yoda@example.com
+        to: ankitvelani@gmail.com
 
-        from: Luke Skywalker # OR 'Luke Skywalker <user@example.com>'
+        from: Ankit.Velani@gmail.com
 
         body: Build job of ${{ github.repository }} completed successfully!
