--- a/.github/workflows/dailyreport.yml
+++ b/.github/workflows/dailyreport.yml
@@ -15,6 +15,6 @@ jobs:
           python-version: 3.x
       - name: Run email code
         env:
-          USER_EMAIL: ${{ secrets.USER_EMAIL }}
-          USER_PASSWORD: ${{ secrets.USER_PASSWORD }}
+          MAIL_USERNAME: ${{ secrets.MAIL_USERNAME }}
+          MAIL_PASSWORD: ${{ secrets.MAIL_PASSWORD }}
         run: python send_email.py
