--- a/.github/workflows/dailyreport.yml
+++ b/.github/workflows/dailyreport.yml
@@ -1,16 +1,13 @@
 name: daily-report
 
-on:
-  # schedule:
-  #   - cron: '*/5 * * * *'
-  workflow_dispatch:
-
+run-name: ${{ github.actor }} is learning GitHub Actions
+on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v3
         with:
           python-version: 3.x
       - name: Run email code
