--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -12,6 +12,17 @@ jobs:
         name: my-artifact
         path: sample.log
     
+  stage-2:
+    runs-on: ubuntu-latest
+    needs: check-bats-version
+    steps:
+    - name: Download log
+      uses: actions/download-artifact@v3
+      with:
+        name : my-artifact
+    - name:
+      run : ls -R
+    
 #     - name: Send mail
 #       uses: dawidd6/action-send-mail@v3
 #       with:
