--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -28,9 +28,7 @@ jobs:
       with:
           python-version: 3.x
     - name: Read File
-      env:
-          LOG_FILE: sample.log
-      run: python read.py
+      run: python read_data.py
     
 #     - name: Send mail
 #       uses: dawidd6/action-send-mail@v3
