--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -29,7 +29,7 @@ jobs:
       with:
           python-version: 3.x
     - name: Read File
-      run: python send_email.py
+      run: python read_data.py
   
     
 #     - name: Send mail
