--- a/.github/workflows/dailyreport.yml
+++ b/.github/workflows/dailyreport.yml
@@ -1,7 +1,10 @@
 name: daily-report
 
-run-name: ${{ github.actor }} is learning GitHub Actions
-on: [push]
+on:
+  # schedule:
+  #   - cron: '*/5 * * * *'
+  workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-latest
