--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -5,7 +5,7 @@ jobs:
   check-bats-version:
     runs-on: ubuntu-latest
     steps:
-    - run: echo hello > sample.log
+    - run: echo "hello, writting output into log file" > sample.log
 
     - uses: actions/upload-artifact@v3
       with:
@@ -16,14 +16,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: check-bats-version
     steps:
-    - name: Download log
-      uses: actions/download-artifact@v3
-      with:
-        name : my-artifact
-    - name: List all the files
-      run : ls -R
-    - name: Display content
-      run: cat sample.log
     - uses: actions/checkout@v3
     - uses: actions/setup-python@v3
       with:
@@ -31,9 +23,7 @@ jobs:
     - uses: actions/download-artifact@v3
       with:
         name : my-artifact
-    - name: Read File using Python
-      env:
-          LOG_FILE: ./my-artifact/sample.log
+    - name: Read log file using Python
       run: python read_data.py
   
     
