--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -25,6 +25,10 @@ jobs:
         name : my-artifact
     - name: Read log file using Python
       run: python read_data.py
+    - uses: actions/upload-artifact@v3
+      with:
+        name: my-artifact
+        path: ./*
   
     
 #     - name: Send mail
