--- a/.github/workflows/dailyreport.yml
+++ b/.github/workflows/dailyreport.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/setup-python@v3
         with:
           python-version: 3.x
-      - run: pip install -U pandas, openpyxl, requests
+      - run: pip install -U pandas openpyxl requests
       - name: Run email code
         env:
           MAIL_USERNAME: ${{ secrets.MAIL_USERNAME }}
