--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -1,4 +1,10 @@
 name: learn-github-actions
+
+on:
+  # schedule:
+  #   - cron: '*/5 * * * *'
+  workflow_dispatch:
+
 run-name: ${{ github.actor }} is learning GitHub Actions
 on: [push]
 jobs:
