--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -36,18 +36,18 @@ jobs:
         path: ./*
   
     
-    - name: Send mail
-      uses: dawidd6/action-send-mail@v3
-      with:
-        server_address: smtp.gmail.com
-        server_port: 465
+    # - name: Send mail
+    #   uses: dawidd6/action-send-mail@v3
+    #   with:
+    #     server_address: smtp.gmail.com
+    #     server_port: 465
 
-        username: ${{ secrets.MAIL_USERNAME }}
-        password: ${{ secrets.MAIL_PASSWORD }}
+    #     username: ${{ secrets.MAIL_USERNAME }}
+    #     password: ${{ secrets.MAIL_PASSWORD }}
 
-        subject: Github Actions job result
-        to: ankitvelani@gmail.com
+    #     subject: Github Actions job result
+    #     to: ankitvelani@gmail.com
 
-        from: Ankit.Velani@gmail.com
+    #     from: Ankit.Velani@gmail.com
 
-        body: Build job of ${{ github.repository }} completed successfully!
+    #     body: Build job of ${{ github.repository }} completed successfully!
