--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -17,23 +17,23 @@ jobs:
         name: my-artifact
         path: sample.log
     
-  stage-2:
-    runs-on: ubuntu-latest
-    needs: check-bats-version
-    steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-python@v3
-      with:
-          python-version: 3.x
-    - uses: actions/download-artifact@v3
-      with:
-        name : my-artifact
-    - name: Read log file using Python
-      run: python read_data.py
-    - uses: actions/upload-artifact@v3
-      with:
-        name: my-artifact
-        path: ./*
+  # stage-2:
+  #   runs-on: ubuntu-latest
+  #   needs: check-bats-version
+  #   steps:
+  #   - uses: actions/checkout@v3
+  #   - uses: actions/setup-python@v3
+  #     with:
+  #         python-version: 3.x
+  #   - uses: actions/download-artifact@v3
+  #     with:
+  #       name : my-artifact
+  #   - name: Read log file using Python
+  #     run: python read_data.py
+  #   - uses: actions/upload-artifact@v3
+  #     with:
+  #       name: my-artifact
+  #       path: ./*
   
     
     # - name: Send mail
